sandbox/output
StringCalculator.java:20: error: illegal character: '\'
            String[] numberArray = numbers.split(\n);
                                                 ^
StringCalculator.java:20: error: ';' expected
            String[] numberArray = numbers.split(\n);
                                                  ^
StringCalculator.java:20: error: illegal start of expression
            String[] numberArray = numbers.split(\n);
                                                   ^
3 errors
